backend auth setup added
